fixed wrong fonts on some components

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -9,6 +9,7 @@
     position: relative;
     overflow: hidden;
     transition: scale 0.05s ease-in-out;
+    font-family: inherit;
 }
 
 .raidButton:hover {
