--- a/src/components/Textbox/Textbox.module.css
+++ b/src/components/Textbox/Textbox.module.css
@@ -6,6 +6,7 @@
     font-size: 1rem;
     color: var(--raid_white);
     width: 100%;
+    font-family: inherit;
 }
 
 .label {
